// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtInput Snap render AtInput -- init 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props border 1`] = `
<div
  class="at-input at-input--without-border"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props clear 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props disabled 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container at-input--disabled"
  >
    <div
      class="at-input__overlay"
    />
    <input
      class="at-input__input"
      disabled=""
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props editable 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container at-input--disabled"
  >
    <div
      class="at-input__overlay"
    />
    <input
      class="at-input__input"
      disabled=""
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props error 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container at-input--error"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__icon"
    >
      <span
        class="at-icon at-icon-alert-circle at-input__icon-alert"
      />
    </div>
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props maxlength 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props name 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id="name"
      maxlength="140"
      name="name"
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props name 2`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder="placeholder"
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props required 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props style 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props title 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <label
      class="at-input__title false"
      for=""
    >
      title
    </label>
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props type(digit) 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="digit"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props type(idcard) 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="idcard"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props type(number) 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="number"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props type(password) 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="password"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props type(phone) 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="11"
      name=""
      placeholder=""
      type="number"
      value=""
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;

exports[`AtInput Snap render AtInput -- props value 1`] = `
<div
  class="at-input"
>
  <div
    class="at-input__container"
  >
    <div
      class="at-input__overlay at-input__overlay--hidden"
    />
    <input
      class="at-input__input"
      id=""
      maxlength="140"
      name=""
      placeholder=""
      type="text"
      value="value"
    />
    <div
      class="at-input__children"
    />
  </div>
</div>
`;
